<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Teacher</class>
 <widget class="QWidget" name="Teacher">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1399</width>
    <height>762</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="QFrame" name="frame">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1400</width>
     <height>800</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QTextEdit{
	font-size: 14px;
	padding: 5px;
	background-color: white;
	border: 1px solid black;
}
#fr_sinhvien, #fr_lophoc, #fr_thongtin{
	border: 2px solid grey;
}
QComboBox{
	font-size:14px;
	border: 1px solid black;
	padding: 5px
}
QComboBox::drop-down{
	border: none;
}
QComboBox::down-arrow{
	image: url(:/assets/assets/icons/droparrow.ico);
	width: 18px;
	background-color: white;
	height: 20px;
	margin-right: 15px
}
QComboBox:on
QComboBox QListView
QComboBox QListView::item
QComboBox QListView::item:hover
QComboBox QListView::item:selected</string>
   </property>
   <property name="frameShape">
    <enum>QFrame::StyledPanel</enum>
   </property>
   <property name="frameShadow">
    <enum>QFrame::Raised</enum>
   </property>
   <widget class="QLabel" name="lb_main">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>1400</width>
      <height>50</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>18</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
    <property name="text">
     <string>QUẢN LÝ THÔNG TIN GIẢNG VIÊN</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
   <widget class="Line" name="line">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>50</y>
      <width>1400</width>
      <height>3</height>
     </rect>
    </property>
    <property name="orientation">
     <enum>Qt::Horizontal</enum>
    </property>
   </widget>
   <widget class="QFrame" name="fr_thongtin">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>60</y>
      <width>561</width>
      <height>661</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">#frame{
	border: 1px solid black
}
QPushButton{
	padding: 15px 5px;
	background-color: #D5EDF9;
}
#gridLayout{
	border: 1px solid black;
}
</string>
    </property>
    <property name="frameShape">
     <enum>QFrame::StyledPanel</enum>
    </property>
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
    <widget class="QGroupBox" name="grbx_canhan">
     <property name="geometry">
      <rect>
       <x>20</x>
       <y>60</y>
       <width>521</width>
       <height>591</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>10</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="styleSheet">
      <string notr="true">QLabel, QPushButton{
	font-size: 14px;
}</string>
     </property>
     <property name="title">
      <string>Thông tin cá nhân</string>
     </property>
     <widget class="QLabel" name="lb_hoten">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>20</y>
        <width>71</width>
        <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <pointsize>-1</pointsize>
       </font>
      </property>
      <property name="text">
       <string>Mã GV:</string>
      </property>
     </widget>
     <widget class="QLabel" name="lb_namsinh">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>120</y>
        <width>90</width>
        <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <pointsize>-1</pointsize>
       </font>
      </property>
      <property name="text">
       <string>Năm sinh:</string>
      </property>
     </widget>
     <widget class="QLabel" name="lb_cccd">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>170</y>
        <width>57</width>
        <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <pointsize>-1</pointsize>
       </font>
      </property>
      <property name="text">
       <string>CCCD:</string>
      </property>
     </widget>
     <widget class="QLabel" name="lb_gioitinh">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>220</y>
        <width>81</width>
        <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <pointsize>-1</pointsize>
       </font>
      </property>
      <property name="text">
       <string>Giới tính:</string>
      </property>
     </widget>
     <widget class="QLabel" name="lb_email">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>270</y>
        <width>56</width>
        <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <pointsize>-1</pointsize>
       </font>
      </property>
      <property name="text">
       <string>Email:</string>
      </property>
     </widget>
     <widget class="QLabel" name="lb_sdt">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>320</y>
        <width>44</width>
        <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <pointsize>-1</pointsize>
       </font>
      </property>
      <property name="text">
       <string>SĐT:</string>
      </property>
     </widget>
     <widget class="QTextEdit" name="txt_id">
      <property name="enabled">
       <bool>false</bool>
      </property>
      <property name="geometry">
       <rect>
        <x>90</x>
        <y>20</y>
        <width>411</width>
        <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <pointsize>-1</pointsize>
       </font>
      </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
      <property name="markdown">
       <string>Mã GV

</string>
      </property>
      <property name="html">
       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
p, li { white-space: pre-wrap; }
&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:14px; font-weight:400; font-style:normal;&quot;&gt;
&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:14px;&quot;&gt;Mã GV&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="placeholderText">
       <string>Mã GV</string>
      </property>
     </widget>
     <widget class="QTextEdit" name="txt_namsinh">
      <property name="geometry">
       <rect>
        <x>90</x>
        <y>120</y>
        <width>411</width>
        <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <pointsize>-1</pointsize>
       </font>
      </property>
      <property name="placeholderText">
       <string>Nhập năm sinh</string>
      </property>
     </widget>
     <widget class="QTextEdit" name="txt_cccd">
      <property name="geometry">
       <rect>
        <x>90</x>
        <y>170</y>
        <width>411</width>
        <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <pointsize>-1</pointsize>
       </font>
      </property>
      <property name="placeholderText">
       <string>Nhập căn cước công dân</string>
      </property>
     </widget>
     <widget class="QTextEdit" name="txt_email">
      <property name="geometry">
       <rect>
        <x>90</x>
        <y>270</y>
        <width>411</width>
        <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <pointsize>-1</pointsize>
       </font>
      </property>
      <property name="placeholderText">
       <string>Nhập email</string>
      </property>
     </widget>
     <widget class="QTextEdit" name="txt_sdt">
      <property name="geometry">
       <rect>
        <x>90</x>
        <y>320</y>
        <width>411</width>
        <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <pointsize>-1</pointsize>
       </font>
      </property>
      <property name="placeholderText">
       <string>Nhập số điện thoại</string>
      </property>
     </widget>
     <widget class="QTextEdit" name="txt_hoten">
      <property name="geometry">
       <rect>
        <x>90</x>
        <y>70</y>
        <width>411</width>
        <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <pointsize>-1</pointsize>
       </font>
      </property>
      <property name="placeholderText">
       <string>Nhập họ tên giảng viên</string>
      </property>
     </widget>
     <widget class="QLabel" name="lb_hoten_2">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>70</y>
        <width>71</width>
        <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <pointsize>-1</pointsize>
       </font>
      </property>
      <property name="text">
       <string>Họ tên:</string>
      </property>
     </widget>
     <widget class="QComboBox" name="cbx_gioitinh">
      <property name="geometry">
       <rect>
        <x>90</x>
        <y>221</y>
        <width>131</width>
        <height>41</height>
       </rect>
      </property>
      <property name="editable">
       <bool>false</bool>
      </property>
      <item>
       <property name="text">
        <string>Nam</string>
       </property>
      </item>
      <item>
       <property name="text">
        <string>Nữ</string>
       </property>
      </item>
     </widget>
     <widget class="QFrame" name="gridBtn">
      <property name="geometry">
       <rect>
        <x>20</x>
        <y>470</y>
        <width>491</width>
        <height>118</height>
       </rect>
      </property>
      <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>1</x>
         <y>7</y>
         <width>481</width>
         <height>54</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout">
        <property name="horizontalSpacing">
         <number>1</number>
        </property>
        <property name="verticalSpacing">
         <number>0</number>
        </property>
        <item row="0" column="0">
         <widget class="QPushButton" name="btn_luu">
          <property name="text">
           <string>Thêm mới</string>
          </property>
          <property name="flat">
           <bool>false</bool>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
         <widget class="QPushButton" name="btn_xoa">
          <property name="text">
           <string>Xóa</string>
          </property>
         </widget>
        </item>
        <item row="0" column="2">
         <widget class="QPushButton" name="btn_sua">
          <property name="text">
           <string>Sửa</string>
          </property>
         </widget>
        </item>
        <item row="0" column="3">
         <widget class="QPushButton" name="btn_reset">
          <property name="text">
           <string>Làm mới</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
      <widget class="QWidget" name="layoutWidget_2">
       <property name="geometry">
        <rect>
         <x>0</x>
         <y>60</y>
         <width>481</width>
         <height>51</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
        <property name="spacing">
         <number>0</number>
        </property>
       </layout>
      </widget>
     </widget>
     <widget class="QLabel" name="lb_sdt_2">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>370</y>
        <width>44</width>
        <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <pointsize>-1</pointsize>
       </font>
      </property>
      <property name="text">
       <string>Mã TK</string>
      </property>
     </widget>
     <widget class="QTextEdit" name="txt_matk">
      <property name="geometry">
       <rect>
        <x>90</x>
        <y>370</y>
        <width>411</width>
        <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <pointsize>-1</pointsize>
       </font>
      </property>
      <property name="placeholderText">
       <string>Mã TK</string>
      </property>
     </widget>
    </widget>
    <widget class="QLabel" name="lb_thongtin">
     <property name="geometry">
      <rect>
       <x>4</x>
       <y>10</y>
       <width>551</width>
       <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>-1</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="styleSheet">
      <string notr="true">font-size: 20px;
font-weight: bold;</string>
     </property>
     <property name="text">
      <string>THÔNG TIN GIẢNG VIÊN</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </widget>
   <widget class="QFrame" name="fr_sinhvien">
    <property name="geometry">
     <rect>
      <x>589</x>
      <y>60</y>
      <width>801</width>
      <height>661</height>
     </rect>
    </property>
    <property name="frameShape">
     <enum>QFrame::StyledPanel</enum>
    </property>
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
    <widget class="QTableWidget" name="tableteacher">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>110</y>
       <width>781</width>
       <height>541</height>
      </rect>
     </property>
     <property name="editTriggers">
      <set>QAbstractItemView::NoEditTriggers</set>
     </property>
     <property name="selectionMode">
      <enum>QAbstractItemView::SingleSelection</enum>
     </property>
     <property name="selectionBehavior">
      <enum>QAbstractItemView::SelectRows</enum>
     </property>
     <property name="sortingEnabled">
      <bool>true</bool>
     </property>
     <column>
      <property name="text">
       <string>Mã SV</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Họ tên</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Giới tính</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>CMND</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Ngày sinh</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Email</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>SDT</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Mã TK</string>
      </property>
     </column>
    </widget>
    <widget class="QLabel" name="lb_thongtin_2">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>10</y>
       <width>781</width>
       <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>-1</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="styleSheet">
      <string notr="true">font-size: 20px;
font-weight: bold;
</string>
     </property>
     <property name="text">
      <string>DANH SÁCH GIẢNG VIÊN</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QTextEdit" name="txt_timkiem">
     <property name="geometry">
      <rect>
       <x>310</x>
       <y>60</y>
       <width>191</width>
       <height>41</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>-1</pointsize>
      </font>
     </property>
    </widget>
    <widget class="QLabel" name="lb_thongtin_3">
     <property name="geometry">
      <rect>
       <x>30</x>
       <y>60</y>
       <width>131</width>
       <height>41</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>12</pointsize>
      </font>
     </property>
     <property name="text">
      <string>Tìm kiếm theo :</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QComboBox" name="comboBoxtimkiem">
     <property name="geometry">
      <rect>
       <x>160</x>
       <y>60</y>
       <width>131</width>
       <height>41</height>
      </rect>
     </property>
     <item>
      <property name="text">
       <string>Id</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>Họ tên</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>SĐT</string>
      </property>
     </item>
    </widget>
    <widget class="QWidget" name="layoutWidget_3">
     <property name="geometry">
      <rect>
       <x>530</x>
       <y>50</y>
       <width>231</width>
       <height>50</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="btn_timkiem">
        <property name="text">
         <string>Tìm kiếm</string>
        </property>
        <property name="flat">
         <bool>false</bool>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="btn_xemtatca">
        <property name="text">
         <string>Xem tất cả</string>
        </property>
        <property name="flat">
         <bool>false</bool>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </widget>
  </widget>
 </widget>
 <resources>
  <include location="../resources.qrc"/>
 </resources>
 <connections/>
</ui>
